# gpt-diff

./: .gitignore  README.md  go.sh  lint.sh  pyproject.toml  test-pdf.e2e.sh  test.e2e.sh  test.sh
gpt_diff/: __init__.py  config.py  llm_caller.py  main_cli.py  process.py  prompts.py
local_llm/: README.md
test_data/: csharp-warnings.after.txt  csharp-warnings.before.txt  csharp-warnings.git-diff.txt
